# bego_TPSIT

./: Bego_3E_Es07_esVettori1.c  Bego_3E_Es07_esVettori3 (1).c  esPreparazioneVerifica.c  esPuntatori.c  esStringhe3 (1).c  posNeg (1).c  sconto.c  vetsomma.c
3E/: Bego_3E_Es06_Voti (1).c  Bego_3E_Es07_esVettori2 (1).c  Bego_3E_EsPreparazioneVerifica.c  bego_3E_es4_nPrimi.c  bego_3E_es5_Azioni (1).c  esCodiceBarre.c  esStringhe2 (1).c  esStudenti.c  nPrimi(v2) (1).c  pariDispari (1).c
4E/: bego_05.c  bego_08.c  bego_10.c  bego_11.c  bego_16.c  bego_18.c  bego_19.c  bego_21.c  bego_22.c  bego_23.c
4E/esRipasso/: bego_01.c  bego_02.c  bego_04.c  bego_06.c  bego_09.c  bego_12.c  bego_13.c  bego_14.c  bego_15.c  bego_16.c  bego_17.c  bego_20.c
4E/exec/begoEx_01/: a.out  begoExec_01  begoExec_01.c
4E/exec/begoEx_02/: a.out  begoExec_02.c
4E/exec/begoEx_03/: a.out  begoExec_03.c
4E/file/: bego_file01.c  bego_file02.c  bego_file03.c  bego_file04.c
4E/processi/: a.out  begoP_04.c  begoP_05.c  begoP_06_waitpid.c  begoP_es04.c  begoP_preparazioneV.c  begoP_preparazioneV2  begoP_preparazioneV2.c
4E/sytemCall/: begoSC_01.c  begoSC_02.c
4E/testing/calcolatrice/: CMakeLists.txt
4E/testing/calcolatrice/output/: output.txt
4E/testing/calcolatrice/src/: calcolatrice.c  calcolatrice.h
4E/testing/calcolatrice/test/: test_calcolatrice.cpp
5E/: Client-1  Client-1.c  Client-2.c  a.out  es04_PreparazioneVerfica.c
verifica4E/: BegoFrancesco_FilaA.c  BegoFrancesco_FilaB  BegoFrancesco_FilaB.c  CorrezioneVerificaFilaA.c
verifica5E/: bego  bego.c
(+35 files in other folders)
